# ppx_variants_conv

./: CHANGES.md  INSTALL.txt  META.ab  Makefile  README.md  _oasis  _tags  install.ml  myocamlbuild.ml  opam  ppx_variants_conv.opam  setup.ml
example/: dune  jbuild  test.ml  test.mli
js-utils/: install_tags.ml
src/: META  alpha_renaming.ml  alpha_renaming.mli  dune  jbuild  ppx_variants_conv.ml  ppx_variants_conv.mli  ppx_variants_conv.mllib
test/: dune  dune.inc  gen_test_error_rules.sh  jbuild  test.expected.ml  test.ml  test.mlt  test_gadt_error.expected.ml  test_gadt_error.ml  test_polymorphic_variant_bound_error.expected.ml  test_polymorphic_variant_bound_error.ml  test_polymorphic_variant_inclusion_error.expected.ml  test_polymorphic_variant_inclusion_error.ml  test_polymorphic_variant_lower_bound_error.expected.ml  test_polymorphic_variant_lower_bound_error.ml  test_polymorphic_variant_upper_bound_error.expected.ml  test_polymorphic_variant_upper_bound_error.ml
