opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_variants_conv"
bug-reports: "https://github.com/janestreet/ppx_variants_conv/issues"
dev-repo: "git+https://github.com/janestreet/ppx_variants_conv.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "variantslib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.04.2" ]
descr: "
Generation of accessor and iteration functions for ocaml variant types

Part of the Jane Street's PPX rewriters collection.
"
