(executable
 (name pp)
 (modules pp)
 (libraries ppx_variants_conv ppxlib))

(rule
 (targets test.actual.ml)
 (deps
  (:pp pp.exe)
  (:input test.ml))
 (action
  (run
   ./%{pp}
   -deriving-keep-w32
   both
   -deriving-keep-w60
   both
   --impl
   %{input}
   -o
   %{targets})))

(alias
 (name runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (preprocess
  (pps ppx_variants_conv)))

(include dune.inc)
